--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 :root {
 --primary-color: #026773;
 --secondary-color: #3CA6A6;
---text-color: #024959;
+--text-color: #043df7;
 --background-color: #F2E3D5;
---button-hover: #012E40;
+--button-hover: #ecf4f7;
 --font-body: "Chocolate Classical Sans", serif;
 --font-titulo: "Rakkas", serif;
 }
