--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 --secondary-color: #3CA6A6;
 --text-color: #043df7;
 --background-color: #F2E3D5;
---button-hover: #ecf4f7;
+--button-hover: #72e018;
 --font-body: "Chocolate Classical Sans", serif;
 --font-titulo: "Rakkas", serif;
 }
