--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 --primary-color: #026773;
 --secondary-color: #3CA6A6;
 --text-color: #043df7;
---background-color: #F2E3D5;
---button-hover: #72e018;
+--background-color: #93fcaa75;
+--button-hover: #141413;
 --font-body: "Chocolate Classical Sans", serif;
 --font-titulo: "Rakkas", serif;
 }
